@@ -1,18 +1,20 @@
 v0.5.0
 * minor bug fixes and optimizations
   * replaced calls to "Instance.main.encode" with "Instance.$"
+  * menus section of main gui made more readable
 * removal of extra data files
   * removed special, it's no longer needed
   * moved contents of extranious to accounts
 * reworked of budgets
   * restructured budget entry
   * reworked budget guis
--> reworked loading and saving of entries and backing elements
+* reworked loading and saving of entries and backing elements
   * handled empty due to deletion
   * rationalized Instance
   * made reload more extensive and added save
 * removed obnoxious trace statements
-X editing accounts metadata in gui
+* editing accounts metadata in gui
+X rework JsonObject
 
 v0.4.2
 * dated conversion fixed
